--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,10 @@
   pointer-events: none;
 }
 
+.cart {
+  margin-right: 15vh;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
