--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,10 @@
   justify-content: flex-start;
 }
 
+.img {
+  width: 40%;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
